Controller Input Support

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -67,7 +67,9 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -76,6 +78,22 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++AxisMappings=(AxisName="MoveForward/Backward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveRight/Left",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="TurnLeft/Right",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="LookUp/DOwn",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="MoveForward/Backward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveRight/Left",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="TurnLeft/Right",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="LookUp/DOwn",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="MoveForward/Backward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="MoveRight/Left",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
